codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__long_running_hook_below_background_activity_row.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"80 columns:\\n{}\\n120 columns:\\n{}\", hook_status_frame(&chat, 80),\nhook_status_frame(&chat, 120),)"
---
80 columns:
"                                                                                "
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"  └ checking command policy for deployment commands, production credentials, an…"
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
120 columns:
"                                                                                                                        "
"                                                                                                                        "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view · /stop to close                        "
"  └ checking command policy for deployment commands, production credentials, and paths containing 日本語 before continu…" Hidden by multi-width symbols: [(99, " "), (101, " "), (103, " ")]
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  GPT-5.6-Sol default · /tmp/project                                                                                    "
